# RenderEngine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile_old  README.md  RenderEngine  cmake_install.cmake  main.cpp  main_old.cpp  out
.cache/clangd/index/: EBO.cpp.5D8812A095B01A16.idx  EBO.hpp.70562DA646CA10F9.idx  VAO.cpp.D927958AA6CBA496.idx  VAO.hpp.1AC0790A4A954497.idx  VBO.cpp.D756C7FDDF825AE5.idx  VBO.hpp.ACF12AAC73F33578.idx  camera.cpp.54ABED925C18851C.idx  camera.hpp.D3207B90B069864B.idx  cube.cpp.490022E6829261D9.idx  cube.cpp.BE15511009E6325C.idx  (+40 more)
.github/workflows/: cmake-single-platform.yml
headers/: EBO.hpp  VAO.hpp  VBO.hpp  camera.hpp  cube.hpp  light.hpp  physicsEngine.hpp  physicsObject.hpp  plane.hpp  renderObject.hpp  renderer.hpp  shaderClass.hpp  sphere.hpp  texture.hpp
include/physics/: physicsEngine.hpp  physicsObject.hpp
include/render/: camera.hpp  light.hpp  renderObject.hpp  renderer.hpp
include/scene/: iTaggedObjectManager.hpp  idTag.hpp  sceneObject.hpp  sceneOrchestrator.hpp
presets/: CMakePresets.json
shaders/: cellshade.frag  default.frag  default.vert  fun.frag  fun.vert  light.frag  light.vert  shadow.frag  shadow.vert  test.frag
sources/: EBO.cpp  VAO.cpp  VBO.cpp  camera.cpp  cube.cpp  light.cpp  physicsEngine.cpp  physicsObject.cpp  plane.cpp  renderObject.cpp  renderer.cpp  shaderClass.cpp  sphere.cpp  texture.cpp
src/physics/: physicsEngine.cpp  physicsObject.cpp
src/render/: camera.cpp  light.cpp  renderObject.cpp  renderer.cpp
src/scene/: idTag.cpp  sceneObject.cpp  sceneOrchestrator.cpp
(+30 files in other folders)
